Fix serif fonts are used on Safari (#40)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 body {
   margin: 0;
   color: #4d4d4d;
+  font-family: sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
